# murmur

./: .gitignore  Cargo.toml  README.md  config.example.toml
crates/murmur-cli/: Cargo.toml
crates/murmur-cli/src/: main.rs
crates/murmur-context/: Cargo.toml
crates/murmur-context/src/: history.rs  project.rs
crates/murmur-daemon/: Cargo.toml
crates/murmur-daemon/src/: cache.rs  config.rs  handler.rs  history.rs  lib.rs  prefetch.rs  server.rs
crates/murmur-daemon/tests/: integration.rs
crates/murmur-protocol/: Cargo.toml
crates/murmur-protocol/src/: context.rs  jsonrpc.rs  lib.rs  voice.rs
crates/murmur-providers/src/: anthropic.rs  codestral.rs  lib.rs  ollama.rs  router.rs
crates/murmur-voice/: Cargo.toml
crates/murmur-voice/src/: apple.rs  claude_cli.rs  deepgram.rs  lib.rs  restructure.rs
integrations/claude-code/: settings.example.json
integrations/claude-code/hooks/: murmur-context.sh  murmur-learn.sh
integrations/codex/: config.example.toml
integrations/codex/mcp-server/: Cargo.toml  README.md
integrations/codex/mcp-server/src/: main.rs
integrations/codex/notify/: murmur-notify.py
murmur/: .gitignore  CLAUDE.md  README.md
murmur/crates/murmur-context/src/: env.rs  git.rs  history.rs  lib.rs
murmur/crates/murmur-daemon/src/: config.rs  handler.rs  server.rs
murmur/crates/murmur-protocol/src/: completion.rs  error.rs  lib.rs
murmur/crates/murmur-providers/: Cargo.toml
murmur/crates/murmur-providers/src/: lib.rs  ollama.rs
murmur/crates/murmur-voice/: Cargo.toml
murmur/crates/murmur-voice/src/: lib.rs
murmur/shell-integration/fish/: murmur.fish
shell-integration/bash/: murmur.bash
shell-integration/fish/: murmur.fish
shell-integration/zsh/: murmur.zsh
swift-helpers/: Info.plist  build.sh  entitlements.plist  transcribe.swift
