[workspace]
resolver = "2"
members = [
    "crates/murmur-protocol",
    "crates/murmur-context",
    "crates/murmur-providers",
    "crates/murmur-voice",
    "crates/murmur-daemon",
    "crates/murmur-cli",
    "integrations/codex/mcp-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/CLRT19/murmur"

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
lru = "0.12"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
async-trait = "0.1"
base64 = "0.22"
