[package]
name = "murmur-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for Murmur — start, stop, status, setup"

[[bin]]
name = "murmur"
path = "src/main.rs"

[dependencies]
murmur-daemon = { path = "../murmur-daemon" }
murmur-protocol = { path = "../murmur-protocol" }
murmur-voice = { path = "../murmur-voice" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
base64 = { workspace = true }
