[package]
name = "murmur-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Context collection for Murmur (shell history, git state, project detection)"

[dependencies]
murmur-protocol = { path = "../murmur-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "fs"] }
tracing = { workspace = true }
