[package]
name = "murmur-voice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Voice input engine for Murmur (audio capture, STT, restructuring)"

[dependencies]
murmur-protocol = { path = "../murmur-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = "0.1"
hound = "3.5"
